--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,31 @@
     <version>1.0-SNAPSHOT</version>
     <name>remove-session-state-lab</name>
     <url>http://maven.apache.org</url>
+
+
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <version>1.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-spring-service-connector</artifactId>
+            <version>1.2.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
